# hex

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  install-tools.sh  out.evidence.jsonl  out.md  pentest.sh
.github/workflows/: build-deploy.yml
deploy/: README.md  deploy.sh  hex-agent.service
src/: cli.rs  event.rs  main.rs  sandbox.rs
src/agent/: builder.rs  mod.rs  prompt.rs  runner.rs
src/agent/tools/: edit.rs  find_files.rs  grep.rs  list_dir.rs  mod.rs  read.rs  schema.rs  write.rs
src/agent/tools/sec/: afl_fuzz.rs  bloodhound.rs  checksec.rs  dnsx.rs  ffuf.rs  gitleaks.rs  hashcat.rs  httpx.rs  hydra.rs  impacket.rs  john.rs  kerbrute.rs  masscan.rs  mod.rs  nikto.rs  nmap.rs  nuclei.rs  nxc.rs  prowler.rs  r2.rs  ropper.rs  scoutsuite.rs  searchsploit.rs  semgrep.rs  set_scope.rs  sslyze.rs  subfinder.rs  suricata_eve.rs  testssl.rs  trivy.rs  tshark.rs  whatweb.rs  zeek_log.rs
src/config/: mod.rs
src/context/: mod.rs
src/extras/loop/: mod.rs
src/pentest/: agent_executor.rs  agent_reviewer.rs  cost.rs  engagement.rs  evidence.rs  finding.rs  mod.rs  pipeline.rs  report.rs  runtime.rs  scorecard.rs  validator.rs
src/permission/: checker.rs  mod.rs
src/provider/: mod.rs
src/session/: mod.rs  storage.rs
src/ui/: cmd_picker.rs  events.rs  input.rs  mod.rs  renderer.rs  slash.rs  terminal.rs
tests/: smoke.rs  test_target.sh
