[package]
name = "hex"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
regex = "1"
rig = "0.37"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "fs", "io-util"] }
futures = "0.3"
anyhow = "1"
tracing = "0.1"
compact_str = { version = "0.9", features = ["serde"] }
ignore = "0.4"
thiserror = "2"
crossterm = "0.29"
pulldown-cmark = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
smallvec = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
include_dir = "0.7"
ipnet = "2"
quick-xml = { version = "0.36", features = ["serialize"] }

[dev-dependencies]
tempfile = "3.27.0"
